--- a/components/admin/admin.css
+++ b/components/admin/admin.css
@@ -87,4 +87,29 @@ th, td {
 
 th {
     background-color: #f9f9f9;
+    text-align: left;
+}
+.logo{
+    display: flex;
+}
+
+#logoImage{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid #6ab7e2;
+}
+.brand-title {
+    font-size: 1.05rem;
+    color: #6ab7e2;
+    margin-left: 10px;
+}
+#logoLink {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+#nav-links {
+    margin-top: 32px;
 }
