cehckout page, crud operation

--- a/components/admin/admin.html
+++ b/components/admin/admin.html
@@ -20,9 +20,9 @@
         <nav id="nav-links">
             <a href="#" class="active">Dashboard</a>
             <a href="/components/admin/user.html">Users</a>
-            <a href="#">Products</a>
+            <a href="/components/controllers/products.html">Products</a>
             <a href="#">Orders</a>
-            <a href="/components/admin/addProducts.html">Add Products</a>
+            <a href="/components/controllers/products/addProduct.html">Add Products</a>
             <a href="#">Settings</a>
             <a href="#" id="logoutLink">Logout</a>
         </nav>
