--- a/components/admin/user.html
+++ b/components/admin/user.html
@@ -20,8 +20,8 @@
          <nav id="nav-links">
             <a href="/components/admin/admin.html">Dashboard</a>
             <a href="#" class="active">Users</a>
-            <a href="#">Products</a>
-            <a href="#">Orders</a>
+            <a href="/components/controllers/products.html">Products</a>
+            <a href="/components/admin/orders.html">Orders</a>
             <a href="/components/controllers/products/addProduct.html">Add Products</a>
             <a href="#">Settings</a>
             <a href="#" id="logoutLink">Logout</a>
