--- a/components/controllers/products.html
+++ b/components/controllers/products.html
@@ -25,7 +25,7 @@
             <a href="/components/admin/admin.html">Dashboard</a>
             <a href="/components/admin/user.html">Users</a>
             <a href="/components/controllers/products.html" class="active">Products</a>
-            <a href="#">Orders</a>
+            <a href="/components/admin/orders.html">Orders</a>
             <a href="/components/controllers/products/addProduct.html">Add Products</a>
             <a href="#">Settings</a>
             <a href="#" id="logoutLink">Logout</a>
