--- a/components/controllers/products/addProduct.html
+++ b/components/controllers/products/addProduct.html
@@ -25,8 +25,8 @@
             <a href="/components/admin/admin.html">Dashboard</a>
             <a href="/components/admin/user.html">Users</a>
             <a href="/components/controllers/products.html">Products</a>
-            <a href="#">Orders</a>
-            <a href="#" class="active">Add Products</a>
+            <a href="/components/admin/orders.html">Orders</a>
+            <a href="/components/controllers/products/addProduct.html" class="active">Add Products</a>
             <a href="#">Settings</a>
             <a href="#" id="logoutLink">Logout</a>
         </nav>
